# CME-FedWatch

./: .gitignore  README.md  pyproject.toml
cme_fedwatch/: __init__.py  api.py  calc.py  cli.py  fomc.py
cme_fedwatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: DECISIONS.md
src/cme_fedwatch/: __init__.py  api.py  calc.py  cli.py  fomc.py
tests/: test_cli_warning.py  test_schedule_status.py
