[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cme-fedwatch"
version = "0.1.2"
description = "Unofficial CME FedWatch — FOMC rate-change probabilities in one line of Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["fedwatch", "fomc", "federal-reserve", "interest-rates", "fed-funds", "cme", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "curl_cffi>=0.6",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/tjdwls101010/CME-FedWatch"
Repository = "https://github.com/tjdwls101010/CME-FedWatch"
Issues = "https://github.com/tjdwls101010/CME-FedWatch/issues"

[project.scripts]
cme-fedwatch = "cme_fedwatch.cli:main"
